--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-jshint": "~0.6.2",
     "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-jasmine": "~0.5.1",
-    "bower": "~1.1.0"
+    "grunt-contrib-jasmine": "~0.5.1"
   },
   "dependencies":
   { 
