--- a/package.json
+++ b/package.json
@@ -34,17 +34,13 @@
       "url": "http://www.gnu.org/licenses"
     }
   ],
-  "devDependencies":
-  {
+  "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-jshint": "~0.6.2",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-jasmine": "~0.5.1"
+    "grunt-contrib-watch": "~0.5.1"
   },
-  "dependencies":
-  { 
-    "Web-State-Machine" : "git://github.com/WebMole/Web-State-Machine.git"
+  "dependencies": {
+    "Web-State-Machine": "git://github.com/WebMole/Web-State-Machine.git"
   }
 }
