--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
   ],
   "dependencies": {
     "jquery": "~2.0.3",
-    "jquery-ui": "~1.10.3",
-    "jquery-zclip": "~1.1.3"
+    "jquery-ui": "~1.10.3"
   },
   "resolutions": {
     "jquery": "~2.0.3"
